--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     
     <title> Aman's first website</title>
-    <link rel="stylesheet" href="C:\Users\user\Desktop\HTML Project files\css\style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body >
     <table >
