--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     
     <title>My Contact </title>
-    <link rel="stylesheet" href="C:\Users\user\Desktop\HTML Project files\css\style.css">
+    <link rel="style.css">
 </head>
 <body>
     <h1>MY Contact Details</h1>
