--- a/MyHobbies.html
+++ b/MyHobbies.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     
     <title>My Hobbies</title>
-    <link rel="stylesheet" href="C:\Users\user\Desktop\HTML Project files\css\style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h3>MY Hobbies</h3>
