--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     
     <title> Aman's first website</title>
+    <link rel="icon" href="titleimage.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body >
